fixing overflow issue

--- a/Modèle/modèle.css
+++ b/Modèle/modèle.css
@@ -2,6 +2,10 @@
     margin: 0;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 /* .back{
     background-color: #FFFFFF;
     margin: 200;
@@ -277,13 +281,13 @@ b {
     }
 
     #footer {
-        height: 1200px;
+        height: 1300px;
     }
 
     .footer-group h2 {
         padding-top: 20px;
         width: 100%;
-        height: 50px;
+        height: 90px;
     }
 
 
