--- a/Vitrine/Vitrine.css
+++ b/Vitrine/Vitrine.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 /* remove watermark */
 img[src="https://cdn.000webhost.com/000webhost/logo/footer-powered-by-000webhost-white2.png"] {
     display: none;
@@ -242,7 +246,12 @@ body {
     opacity: 1;
 }
 
+/* footer section */
 
+b {
+    position: relative;
+    left: 18px;
+}
 
 #footer {
     border-top: 2px solid #fff;
@@ -258,6 +267,7 @@ body {
 
 #footer .flex-container {
     display: flex;
+    height: 100%;
 }
 
 #footer .footer-group {
@@ -267,9 +277,6 @@ body {
 
 #footer .footer-group a {
     color: #fff;
-    width: 100%;
-    height: 100%;
-    text-decoration: none;
     font-size: 13px;
     font-family: AudiType, sans-serif;
 
@@ -283,14 +290,16 @@ body {
 
 }
 
-#footer .footer-group li {
-    list-style: none;
-    text-decoration: none;
-    height: 40px;
-    width: 300px;
+
+
+.sub-link {
+    line-height: normal;
+    height: 40px !important;
+    width: 300px !important;
+    display: block !important;
 }
 
-#footer .footer-group li a:hover {
+.sub-link:hover {
     text-decoration: underline;
 }
 
@@ -305,8 +314,6 @@ body {
     z-index: 3;
 
 }
-
-
 
 
 .arrow-container-left,
@@ -414,13 +421,13 @@ body {
     }
 
     #footer {
-        height: 1200px;
+        height: 1300px;
     }
 
     .footer-group h2 {
         padding-top: 20px;
-        width: 100%;
-        height: 50px;
+        /* width: 100%; */
+        height: 90px;
     }
 
     .textAudi {
